--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="mx-auto bg-orange-100 md:max-w-2xl lg:max-w-7xl">
+  <body class="mx-auto bg-orange-100">
     <div class="min-h-screen " id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
